[package]
name = "rod"
version = "0.1.0"
edition = "2021"
description = "A simple compiler, written in Rust."
repository = "https://github.com/magnusrodseth/rod"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chumsky = "0.9.2"
tracing = "0.1.37"
